[package]
name = "darkmap"
version = "0.1.0"
edition = "2021"
authors = ["Sam Lakerveld <dark@dark.red>"]
resolver = "2"

[dependencies]
bevy                 = { version = "0.12.1", features = ["dynamic_linking"] }
bevy_atmosphere      = "0.8.1"
bevy_egui            = "0.24.0"
bevy-inspector-egui  = "0.22.1"
bevy_panorbit_camera = { git = "https://github.com/darkwater/bevy_panorbit_camera", features = ["bevy_egui"] }
bevy_mod_billboard   = { version = "0.5.1" }
bevy_mod_outline     = { version = "0.6.0" }
bevy_mod_picking     = { path = "../bevy_mod_picking", default-features = false, features = [
    "selection", "backend_bevy_ui", "backend_egui", "backend_raycast", "bevy_text"
] }

anyhow             = "1.0.79"
catppuccin         = "1.4.0"
css-colors         = "1.0.1"
earcutr            = "0.4.3"
format_serde_error = "0.3.0"
futures            = "0.3.30"
geo                = "0.27.0"
handlebars         = "5.1.0"
itertools          = "0.12.0"
lazy_static        = "1.4.0"
serde              = { version = "1.0.196", features = ["derive"] }
serde_json         = "1.0.112"
surf               = { version = "2.3.2", features = ["h1-client-rustls"] }
thiserror          = "1.0.56"
urlencoding        = "2.1.3"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
overflow-checks = false
