[package]
name = "darkmap"
version = "0.1.0"
edition = "2021"
authors = ["Sam Lakerveld <dark@dark.red>"]
default-run = "darkmap"

[dependencies]
overpass = { workspace = true }

bevy                 = { version = "0.12.1", features = ["dynamic_linking"] }
bevy_atmosphere      = "0.8.1"
bevy_egui            = "0.24.0"
bevy-inspector-egui  = "0.22.1"
bevy_panorbit_camera = { git = "https://github.com/darkwater/bevy_panorbit_camera", features = ["bevy_egui"] }
bevy_mod_outline     = { version = "0.6.0" }
bevy_mod_picking     = { version = "0.17.0", default-features = false, features = [
    "bevy_text", "bevy_ui", "selection", "backend_raycast", "backend_sprite", "backend_egui"
] }

anyhow     = "1.0.79"
earcutr    = "0.4.3"
futures    = "0.3.30"
geo        = "0.27.0"
handlebars = "5.1.0"
itertools  = "0.12.0"
serde_json = "1.0.112"
