[package]
name = "overpass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow      = "1.0.79"
geo         = "0.27.0"
itertools   = "0.12.0"
lazy_static = "1.4.0"
serde       = { version = "1.0.196", features = ["derive"] }
serde_json  = "1.0.112"
surf        = { version = "2.3.2", features = ["h1-client-rustls"] }
thiserror   = "1.0.56"
urlencoding = "2.1.3"
